#44 first draft of start script creation